# DanceToNotes

main/: CMakeLists.txt  idf_component.yml
main/spiffs/: function.html  link.html
main/src/: main.cpp
main/src/connection/: connection.cpp  connection.h
main/src/imu/: imu.cpp  imu.h
main/src/initDevice/: initDevice.cpp  initDevice.h
main/src/webPage/: webPage.cpp  webPage.h
